# decayangle

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  LICENSE.md  LICENSE.txt  README.md  decayangle.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: decayangle.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yml  pre-commit.yml  python-package.yml  release.yml  run-tests.yml  testpypi-release.yml
_sources/: decayangle.rst.txt  index.rst.txt  modules.rst.txt
decayangle-rs/: Cargo.toml  pyproject.toml
decayangle-rs/src/: kinematics.rs  lib.rs  lorentz.rs  topology.rs
doc/_build/: index.html  objects.inv
doc/_build/doctrees/: environment.pickle
doc/_build/html/_static/: documentation_options.js
docs/: conf.py  index.rst
docs/_build/: .buildinfo  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  search.html
docs/_build/html/_sources/: index.rst.txt
examples/: two_pi_jumps_3_body.py
notebooks/: decay_example.ipynb  differences_with_conventions.ipynb  four_body_angles.ipynb  fun_with_angles.ipynb  massless.ipynb  phasespace_angles.ipynb  three_body_angles.ipynb
scripts/: massless_limit_wigner.py
src/decayangle/: Decay.py  DecayTopology.py  __about__.py  backend.py  config.py  decay_topology.py  kinematics.py  lorentz.py  numerics_helpers.py
tests/: __init__.py  perf_check.py  test_Nbody.py  test_config.py  test_continuity.py  test_decay.py  test_dpd.py  test_elisabeth.py  test_equivalence.py  test_equivalence_massless.py  test_equivalence_massless_rust.py  test_kinematics.py  test_lorentz.py  test_massless_wigner.py  test_parallel_wigner.py  test_particle2.py  test_sorting.py  test_topology.py
tests/rust_equivalence/: conftest.py  test_conventions_rust.py  test_helicity_rust.py  test_massless_rust.py  test_wigner_rust.py
tests/test_data/: Parsed_ccp_kinematics_100events.json
