[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/decayangle"]

[project]
name = "decayangle"
description = 'A tool for wigner rotations in n-body decays'
version = '0.1.0'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kai Habermann", email = "kai.habermann@gmx.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "networkx==3.0.0",
  "jax",
  "jaxlib",
  "numpy",
  "tqdm"
]

[project.urls]
Documentation = "https://github.com/KaiHabermann/decayangle#readme"
Issues = "https://github.com/KaiHabermann/decayangle/issues"
Source = "https://github.com/KaiHabermann/decayangle"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    'tests/*',
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov --cov=tests'

[[tool.hatch.envs.test.matrix]]
python = ["312", "38", "39", "311", "310"]
version = ["0.1.0"]
