[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "decayangle-rs"
description = "Rust-accelerated backend for the decayangle package"
version = "1.1.3"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Kai Habermann", email = "kai.habermann@gmx.net" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/KaiHabermann/decayangle"

[tool.maturin]
module-name = "decayangle_rs"
features = ["pyo3/extension-module"]
